--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node --env-file .env --experimental-strip-types --no-warnings src/server.ts",
     "dev": "node --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
-    "test": "vite"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "teste:coverage": "vitest --coverage run"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
