--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "bcrypt": "^6.0.0",
     "fastify": "^5.4.0",
     "fastify-metrics": "^12.1.0",
     "fastify-type-provider-zod": "^5.0.2",
@@ -23,6 +24,7 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "@vitest/coverage-v8": "^3.2.4",
