--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "webapp create to delivery content to my portfolio",
   "main": "server.ts",
   "scripts": {
-    "start": "node --env-file .env --experimental-strip-types --no-warnings src/server.ts",
-    "dev": "node --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
+    "start": "tsx src/server.ts",
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc",
     "test": "vitest run",
     "test:watch": "vitest",
     "teste:coverage": "vitest --coverage run"
@@ -35,6 +36,7 @@
     "eslint-plugin-prettier": "^5.5.3",
     "prettier": "^3.6.2",
     "tsup": "^8.5.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
